--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-                                    /* Lets take our knowledge of CSS selectors, properties, and inheritance to add some style to the Sweet Eats Bakery website.  
+/* Lets take our knowledge of CSS selectors, properties, and inheritance to add some style to the Sweet Eats Bakery website.  
 
 Task 1: Explore the CSS.  Look at all the unique selectors.  Find things that are new to you and learn what they do.  Find properties you may not be familiar with and google them.
 
@@ -13,32 +13,36 @@ Time: 8:00 a.m prompt
 As usual, host your completed project on Github Pages and share the link for the solution to be submitted on "lab-tasks" channel on slack...
 
 */
-                            /*======= Create a new universal selector that changes the font color to: #3C373B */
-                            
-                            * {
-                                #3C3738
-                            }
-                            
-                            h1 {
-                                font-family: 'Gaegu', cursive;
-                                margin: 20px 0;
-                                /*=======  Update the font size to 60px and center the text */
-                                font-size: 60px;
-                                text-align: center;
-                            }
-                            
-                            h2,
-                            h3,
-                            h4,
-                            h5,
-                            h6 {
-                                font-family: 'Gaegu', cursive;
-                                margin-bottom: 0;
-                                padding: 0 10px;
-                                /*=======  Update the font size to 30px */
-                                font-size: 30px;
-                            }
-                            /*======= Create a selector for ALL p tags in the site to have the following styles:
+
+
+/*======= Create a new universal selector that changes the font color to: #3C373B */
+
+* {
+    color: #3C373B;
+}
+
+h1 {
+    font-family: 'Gaegu', cursive;
+    margin: 20px 0;
+    /*=======  Update the font size to 60px and center the text */
+    font-size: 60px;
+    text-align: center;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Gaegu', cursive;
+    margin-bottom: 0;
+    padding: 0 10px;
+    /*=======  Update the font size to 30px */
+    font-size: 30px;
+}
+
+
+/*======= Create a selector for ALL p tags in the site to have the following styles:
 
 font-size: 16px;
 font-family: roboto;
@@ -46,105 +50,131 @@ padding: 10px;
 line-height: 1.4;
 
 */
-                            
-                            p {
-                                font-size: 60px;
-                                font-family: roboto;
-                                padding: 10px;
-                                line-height: 1.4;
-                            }
-                            /*======= Create a selector for ALL images in the site to have the following styles: 
+
+p {
+    font-size: 60px;
+    font-family: roboto;
+    padding: 10px;
+    line-height: 1.4;
+}
+
+
+/*======= Create a selector for ALL images in the site to have the following styles: 
 
   border-radius: 10px;
 
 */
-                            
-                            .content-row {
-                                display: flex;
-                            }
-                            
-                            .content-row div {
-                                /*======= create a margin property.  Set the value to 20px */
-                                .container {
-                                    /*======= create a width property. Set the value to 600px */
-                                    {
-                                        margin: 0 auto;
-                                        width: 600px;
-                                    }
-                                    .container header nav a {
-                                        margin: 0 10px;
-                                        border: 1px solid lightgray;
-                                        padding: 20px;
-                                        display: inline-block;
-                                        border-radius: 20px;
-                                        color: white;
-                                        text-decoration: none;
-                                        margin-bottom: 20px;
-                                        background: #F87B99;
-                                        /*======= create a background property. Set the value to #F87B99 */
-                                    }
-                                    .container header nav a:hover {
-                                        background: white;
-                                        color: pink;
-                                        /*======= create a background property and set it to white.  Then create a color property and set it's value to pink. */
-                                    }
-                                    /*======= Create a selector for the about section to have the following styles:
+
+.content-row {
+    display: flex;
+}
+
+.content-row div {
+    margin: 20px;
+    /*======= create a margin property.  Set the value to 20px */
+}
+
+.container {
+    /*======= create a width property. Set the value to 600px */
+    margin: 0 auto;
+    width: 600px;
+}
+
+.container header nav a {
+    margin: 0 10px;
+    border: 1px solid lightgray;
+    padding: 20px;
+    display: inline-block;
+    border-radius: 20px;
+    color: white;
+    text-decoration: none;
+    margin-bottom: 20px;
+    background: #F87B99;
+    /*======= create a background property. Set the value to #F87B99 */
+}
+
+.container header nav a:hover {
+    background: white;
+    color: pink;
+    /*======= create a background property and set it to white.  Then create a color property and set it's value to pink. */
+}
+
+
+/*======= Create a selector for the about section to have the following styles:
   margin-top: 20px;
 */
-                                    .about {
-                                        margin-top: 20px;
-                                    }
-                                    s .contact-section {
-                                        border-top: 1px dashed black;
-                                        padding: 20px 0;
-                                    }
-                                    .contact-section h2 {
-                                        padding: 0;
-                                        margin: 0 0 10px 0;
-                                    }
-                                    address {
-                                        line-height: 2;
-                                    }
-                                    /*======= Create a selector for the address tag in the contact-section class to have the following styles:
+
+.about {
+    margin-top: 20px;
+}
+
+s .contact-section {
+    border-top: 1px dashed black;
+    padding: 20px 0;
+}
+
+.contact-section h2 {
+    padding: 0;
+    margin: 0 0 10px 0;
+}
+
+address {
+    line-height: 2;
+}
+
+
+/*======= Create a selector for the address tag in the contact-section class to have the following styles:
    line-height: 2;
 */
-                                    footer {
-                                        width: 100%;
-                                        background: #F87B99;
-                                        border-top: 1px dashed white;
-                                    }
-                                    footer .footer-content {
-                                        margin: 0 auto;
-                                        width: 600px;
-                                        /*======= create a width property. Set the value to 600px */
-                                    }
-                                    footer .footer-content h3 {
-                                        padding: 0;
-                                        margin: 20px 0;
-                                    }
-                                    footer nav {
-                                        display: flex;
-                                    }
-                                    /*======= Create a selector for the anchor tag in the footer to have the following styles:
+
+footer {
+    width: 100%;
+    background: #F87B99;
+    border-top: 1px dashed white;
+}
+
+footer .footer-content {
+    margin: 0 auto;
+    width: 600px;
+    /*======= create a width property. Set the value to 600px */
+}
+
+footer .footer-content h3 {
+    padding: 0;
+    margin: 20px 0;
+}
+
+footer nav {
+    display: flex;
+}
+
+
+/*======= Create a selector for the anchor tag in the footer to have the following styles:
   margin: 10px;
   color: black;
   text-decoration: underline;
 */
-                                    a {
-                                        margin: 10px;
-                                        color: black;
-                                    }
-                                    footer nav a:first-child {
-                                        margin-left: 0;
-                                    }
-                                    /*======= Create a hover state for the anchor tag in the footer nav to have the following styles:
+
+a {
+    margin: 10px;
+    color: black;
+}
+
+footer nav a:first-child {
+    margin-left: 0;
+}
+
+
+/*======= Create a hover state for the anchor tag in the footer nav to have the following styles:
   color: white;
 */
-                                    footer nav a: {
-                                        color: white;
-                                    }
-                                    footer .footer-content .copyright {
-                                        padding: 20px 0;
-                                        /*======= center the text here */
-                                        text-align: center;
-                                    }
+
+footer nav a:hover {
+    color: white;
+}
+
+footer .footer-content .copyright {
+    padding: 20px 0;
+    /*======= center the text here */
+    text-align: center;
+}
